Enables diagnostics for vector-valued predictions

--- a/notebooks/01_debug_mc.ipynb
+++ b/notebooks/01_debug_mc.ipynb
@@ -47,17 +47,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1]\n",
-      " [1]\n",
+      "[[0]\n",
       " [0]\n",
       " [1]\n",
-      " [0]\n",
       " [1]\n",
-      " [0]\n",
       " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
       " [0]]\n"
      ]
     }
@@ -69,7 +69,7 @@
     "                  \"swap\" : 0.1}\n",
     "# generator = DataGenerator(n_samples=3000, n_features=3, noise=0.1, random_seed=42)\n",
     "from mushroom import load_mushroom\n",
-    "X, y = load_mushroom(1000)\n",
+    "X, y = load_mushroom(1000, rng=np.random.default_rng(42))\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
     "print(y_train[:12])"
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-13 19:30:08,959\tINFO worker.py:1942 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n"
+      "2025-09-13 20:25:12,582\tINFO worker.py:1942 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -99,62 +99,52 @@
      "output_type": "stream",
      "text": [
       "Iterations:   0%|          | 0/2000 [00:00<?, ?it/s]\n",
-      "Iterations:   0%|          | 1/2000 [00:00<14:06,  2.36it/s]\n",
-      "Iterations:   0%|          | 6/2000 [00:00<02:19, 14.30it/s]\n",
-      "Iterations:   1%|          | 11/2000 [00:00<01:26, 22.88it/s]\n",
-      "Iterations:   2%|▏         | 30/2000 [00:01<00:55, 35.57it/s]\n",
-      "Iterations:   9%|▉         | 181/2000 [00:04<00:37, 49.07it/s]\n",
+      "Iterations:   0%|          | 1/2000 [00:00<12:40,  2.63it/s]\n",
+      "Iterations:   0%|          | 7/2000 [00:00<01:53, 17.63it/s]\n",
+      "Iterations:   4%|▍         | 82/2000 [00:02<00:44, 43.35it/s]\n",
       "Iterations:   0%|          | 0/2000 [00:00<?, ?it/s]\u001b[32m [repeated 3x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/user-guides/configure-logging.html#log-deduplication for more options.)\u001b[0m\n",
-      "Iterations:  12%|█▏        | 232/2000 [00:05<00:29, 59.46it/s]\u001b[32m [repeated 163x across cluster]\u001b[0m\n",
-      "Iterations:  12%|█▏        | 243/2000 [00:05<00:30, 57.88it/s]\n",
-      "Iterations:  16%|█▌        | 321/2000 [00:07<00:28, 59.23it/s]\n",
-      "Iterations:  27%|██▋       | 547/2000 [00:10<00:24, 59.67it/s]\u001b[32m [repeated 176x across cluster]\u001b[0m\n",
-      "Iterations:  32%|███▏      | 646/2000 [00:12<00:22, 59.36it/s]\n",
-      "Iterations:  34%|███▍      | 690/2000 [00:12<00:21, 59.68it/s]\n",
-      "Iterations:  41%|████      | 823/2000 [00:15<00:19, 61.10it/s]\u001b[32m [repeated 169x across cluster]\u001b[0m\n",
-      "Iterations:  43%|████▎     | 858/2000 [00:17<00:55, 20.47it/s]\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
-      "Iterations:  53%|█████▎    | 1065/2000 [00:20<00:22, 40.98it/s]\u001b[32m [repeated 148x across cluster]\u001b[0m\n",
-      "Iterations:  51%|█████     | 1012/2000 [00:21<00:16, 58.66it/s]\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
-      "Iterations:  69%|██████▊   | 1371/2000 [00:25<00:10, 59.91it/s]\u001b[32m [repeated 167x across cluster]\u001b[0m\n",
-      "Iterations:  70%|██████▉   | 1395/2000 [00:27<00:10, 58.72it/s]\u001b[32m [repeated 8x across cluster]\u001b[0m\n",
-      "Iterations:  77%|███████▋  | 1543/2000 [00:30<00:10, 42.28it/s]\u001b[32m [repeated 168x across cluster]\u001b[0m\n",
-      "Iterations:  84%|████████▎ | 1672/2000 [00:32<00:07, 43.47it/s]\u001b[32m [repeated 5x across cluster]\u001b[0m\n",
-      "Iterations:  91%|█████████▏| 1828/2000 [00:33<00:03, 56.28it/s]\n",
-      "Iterations:  92%|█████████▏| 1835/2000 [00:33<00:02, 57.89it/s]\n",
-      "Iterations:  92%|█████████▏| 1842/2000 [00:33<00:02, 58.89it/s]\n",
-      "Iterations:  92%|█████████▏| 1849/2000 [00:33<00:02, 59.37it/s]\n",
-      "Iterations:  93%|█████████▎| 1856/2000 [00:33<00:02, 59.82it/s]\n",
-      "Iterations:  93%|█████████▎| 1863/2000 [00:33<00:02, 60.22it/s]\n",
-      "Iterations:  94%|█████████▎| 1870/2000 [00:33<00:02, 60.50it/s]\n",
-      "Iterations:  94%|█████████▍| 1877/2000 [00:34<00:02, 60.49it/s]\n",
-      "Iterations:  94%|█████████▍| 1884/2000 [00:34<00:01, 61.17it/s]\n",
-      "Iterations:  95%|█████████▍| 1891/2000 [00:34<00:01, 61.84it/s]\n",
-      "Iterations:  95%|█████████▍| 1898/2000 [00:34<00:01, 61.95it/s]\n",
-      "Iterations:  95%|█████████▌| 1905/2000 [00:34<00:01, 61.95it/s]\n",
-      "Iterations:  96%|█████████▌| 1912/2000 [00:34<00:01, 61.86it/s]\n",
-      "Iterations:  96%|█████████▌| 1919/2000 [00:34<00:01, 61.39it/s]\n",
-      "Iterations:  96%|█████████▋| 1926/2000 [00:34<00:01, 61.70it/s]\n",
-      "Iterations:  97%|█████████▋| 1933/2000 [00:34<00:01, 61.67it/s]\n",
-      "Iterations:  97%|█████████▋| 1940/2000 [00:35<00:00, 61.34it/s]\n",
-      "Iterations:  97%|█████████▋| 1947/2000 [00:35<00:00, 61.20it/s]\n",
-      "Iterations:  98%|█████████▊| 1954/2000 [00:35<00:00, 61.20it/s]\n",
-      "Iterations:  91%|█████████▏| 1827/2000 [00:35<00:02, 59.53it/s]\n",
-      "Iterations:  98%|█████████▊| 1961/2000 [00:35<00:00, 61.50it/s]\n",
-      "Iterations:  87%|████████▋ | 1748/2000 [00:35<00:06, 39.46it/s]\u001b[32m [repeated 137x across cluster]\u001b[0m\n",
-      "Iterations:  88%|████████▊ | 1767/2000 [00:36<00:04, 57.80it/s]\u001b[32m [repeated 4x across cluster]\u001b[0m\n",
-      "Iterations:  94%|█████████▎| 1870/2000 [00:38<00:02, 58.17it/s]\n",
-      "Iterations:  94%|█████████▍| 1880/2000 [00:38<00:02, 55.05it/s]\u001b[32m [repeated 48x across cluster]\u001b[0m\n"
+      "Iterations:  13%|█▎        | 251/2000 [00:05<00:29, 59.40it/s]\u001b[32m [repeated 169x across cluster]\u001b[0m\n",
+      "Iterations:  13%|█▎        | 264/2000 [00:05<00:29, 59.14it/s]\n",
+      "Iterations:  21%|██        | 419/2000 [00:08<00:26, 59.48it/s]\n",
+      "Iterations:  27%|██▋       | 536/2000 [00:10<00:41, 35.59it/s]\u001b[32m [repeated 172x across cluster]\u001b[0m\n",
+      "Iterations:  30%|███       | 605/2000 [00:11<00:24, 56.37it/s]\u001b[32m [repeated 2x across cluster]\u001b[0m\n",
+      "Iterations:  40%|███▉      | 794/2000 [00:15<00:21, 56.59it/s]\u001b[32m [repeated 171x across cluster]\u001b[0m\n",
+      "Iterations:  47%|████▋     | 944/2000 [00:18<00:19, 54.11it/s]\u001b[32m [repeated 2x across cluster]\u001b[0m\n",
+      "Iterations:  54%|█████▍    | 1080/2000 [00:20<00:17, 53.78it/s]\u001b[32m [repeated 135x across cluster]\u001b[0m\n",
+      "Iterations:  59%|█████▉    | 1181/2000 [00:22<00:16, 49.50it/s]\n",
+      "Iterations:  52%|█████▏    | 1046/2000 [00:22<00:16, 57.16it/s]\n",
+      "Iterations:  52%|█████▏    | 1047/2000 [00:22<00:22, 43.29it/s]\n",
+      "Iterations:  46%|████▌     | 915/2000 [00:21<00:18, 60.11it/s]\n",
+      "Iterations:  48%|████▊     | 958/2000 [00:23<00:23, 43.78it/s]\n",
+      "Iterations:  68%|██████▊   | 1355/2000 [00:25<00:10, 59.46it/s]\u001b[32m [repeated 124x across cluster]\u001b[0m\n",
+      "Iterations:  59%|█████▉    | 1189/2000 [00:27<00:15, 52.60it/s]\n",
+      "Iterations:  78%|███████▊  | 1553/2000 [00:30<00:25, 17.66it/s]\u001b[32m [repeated 161x across cluster]\u001b[0m\n",
+      "Iterations:  86%|████████▌ | 1719/2000 [00:35<00:05, 53.95it/s]\u001b[32m [repeated 158x across cluster]\u001b[0m\n",
+      "Iterations:  91%|█████████▏| 1827/2000 [00:37<00:05, 34.09it/s]\n",
+      "Iterations:  92%|█████████▏| 1846/2000 [00:38<00:03, 47.75it/s]\n",
+      "Iterations:  79%|███████▊  | 1573/2000 [00:40<00:10, 41.69it/s]\n",
+      "Iterations:  79%|███████▉  | 1579/2000 [00:40<00:09, 45.19it/s]\u001b[32m [repeated 84x across cluster]\u001b[0m\n",
+      "Iterations: 100%|██████████| 2000/2000 [00:41<00:00, 48.33it/s]\n",
+      "Iterations:  95%|█████████▍| 1895/2000 [00:43<00:02, 48.35it/s]\u001b[32m [repeated 77x across cluster]\u001b[0m\n",
+      "Iterations: 100%|██████████| 2000/2000 [00:42<00:00, 46.91it/s]\n",
+      "Iterations:  84%|████████▍ | 1681/2000 [00:44<00:07, 41.23it/s]\n",
+      "Iterations: 100%|██████████| 2000/2000 [00:45<00:00, 43.89it/s]\n",
+      "Iterations:  86%|████████▌ | 1723/2000 [00:45<00:05, 47.59it/s]\u001b[32m [repeated 33x across cluster]\u001b[0m\n",
+      "Iterations: 100%|█████████▉| 1995/2000 [00:45<00:00, 46.41it/s]\u001b[32m [repeated 20x across cluster]\u001b[0m\n",
+      "Iterations:  91%|█████████ | 1823/2000 [00:48<00:03, 45.67it/s]\u001b[32m [repeated 20x across cluster]\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 2000/2000 [00:40<00:00, 49.29it/s]\n",
-      "Iterations: 100%|██████████| 2000/2000 [00:40<00:00, 49.64it/s]\n",
-      "\u001b[36m(BARTActor pid=3066630)\u001b[0m INFO:arviz.preview:arviz_base not installed\n",
-      "\u001b[36m(BARTActor pid=3066630)\u001b[0m INFO:arviz.preview:arviz_stats not installed\n",
-      "\u001b[36m(BARTActor pid=3066630)\u001b[0m INFO:arviz.preview:arviz_plots not installed\n"
+      "Iterations: 100%|██████████| 2000/2000 [00:51<00:00, 38.67it/s]\n",
+      "\u001b[36m(BARTActor pid=3347523)\u001b[0m INFO:arviz.preview:arviz_base not installed\n",
+      "\u001b[36m(BARTActor pid=3347523)\u001b[0m INFO:arviz.preview:arviz_stats not installed\n",
+      "\u001b[36m(BARTActor pid=3347523)\u001b[0m INFO:arviz.preview:arviz_plots not installed\n",
+      "\u001b[36m(BARTActor pid=3347536)\u001b[0m INFO:arviz.preview:arviz_base not installed\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
+      "\u001b[36m(BARTActor pid=3347536)\u001b[0m INFO:arviz.preview:arviz_stats not installed\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
+      "\u001b[36m(BARTActor pid=3347536)\u001b[0m INFO:arviz.preview:arviz_plots not installed\u001b[32m [repeated 3x across cluster]\u001b[0m\n"
      ]
     }
    ],
@@ -174,16 +164,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_chains': 4, 'n_draws': 1500, 'rhat': 1.3181011766562776, 'ess_bulk': 9.680559304601305, 'mcse_over_sd': 0.3250638561342832}\n"
+      "{'n_chains': 4, 'n_draws': 1500, 'rhat': array([1.16637192]), 'ess_bulk': array([15.91862345]), 'mcse_over_sd': array([0.26195221])}\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Compute diagnostics for MultiChainBART\n",
+    "diag = compute_diagnostics(mcb, key=\"eps_sigma2\")\n",
+    "print({\n",
+    "    \"n_chains\": diag[\"n_chains\"],\n",
+    "    \"n_draws\": diag[\"n_draws\"],\n",
+    "    \"rhat\": diag[\"rhat\"],\n",
+    "    \"ess_bulk\": diag[\"ess_bulk\"],\n",
+    "    \"mcse_over_sd\": diag[\"mcse_over_sd\"],\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -215,43 +223,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>change</th>\n",
-       "      <td>639842.0</td>\n",
-       "      <td>626704.0</td>\n",
-       "      <td>35182.0</td>\n",
-       "      <td>0.056138</td>\n",
-       "      <td>0.979467</td>\n",
+       "      <td>640607.0</td>\n",
+       "      <td>624781.0</td>\n",
+       "      <td>39782.0</td>\n",
+       "      <td>0.063674</td>\n",
+       "      <td>0.975295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>grow</th>\n",
-       "      <td>399849.0</td>\n",
-       "      <td>399849.0</td>\n",
-       "      <td>30533.0</td>\n",
-       "      <td>0.076361</td>\n",
+       "      <td>399820.0</td>\n",
+       "      <td>399820.0</td>\n",
+       "      <td>34028.0</td>\n",
+       "      <td>0.085108</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>prune</th>\n",
-       "      <td>400226.0</td>\n",
-       "      <td>392096.0</td>\n",
-       "      <td>28867.0</td>\n",
-       "      <td>0.073622</td>\n",
-       "      <td>0.979686</td>\n",
+       "      <td>400048.0</td>\n",
+       "      <td>390191.0</td>\n",
+       "      <td>32331.0</td>\n",
+       "      <td>0.082859</td>\n",
+       "      <td>0.975360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>swap</th>\n",
-       "      <td>160083.0</td>\n",
-       "      <td>87931.0</td>\n",
-       "      <td>14370.0</td>\n",
-       "      <td>0.163424</td>\n",
-       "      <td>0.549284</td>\n",
+       "      <td>159525.0</td>\n",
+       "      <td>88772.0</td>\n",
+       "      <td>14054.0</td>\n",
+       "      <td>0.158316</td>\n",
+       "      <td>0.556477</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>overall</th>\n",
        "      <td>1600000.0</td>\n",
-       "      <td>1506580.0</td>\n",
-       "      <td>108952.0</td>\n",
-       "      <td>0.072317</td>\n",
-       "      <td>0.941612</td>\n",
+       "      <td>1503564.0</td>\n",
+       "      <td>120195.0</td>\n",
+       "      <td>0.079940</td>\n",
+       "      <td>0.939728</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -259,30 +267,20 @@
       ],
       "text/plain": [
        "          selected   proposed  accepted  acc_rate  prop_rate\n",
-       "change    639842.0   626704.0   35182.0  0.056138   0.979467\n",
-       "grow      399849.0   399849.0   30533.0  0.076361   1.000000\n",
-       "prune     400226.0   392096.0   28867.0  0.073622   0.979686\n",
-       "swap      160083.0    87931.0   14370.0  0.163424   0.549284\n",
-       "overall  1600000.0  1506580.0  108952.0  0.072317   0.941612"
+       "change    640607.0   624781.0   39782.0  0.063674   0.975295\n",
+       "grow      399820.0   399820.0   34028.0  0.085108   1.000000\n",
+       "prune     400048.0   390191.0   32331.0  0.082859   0.975360\n",
+       "swap      159525.0    88772.0   14054.0  0.158316   0.556477\n",
+       "overall  1600000.0  1503564.0  120195.0  0.079940   0.939728"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# Compute diagnostics for MultiChainBART\n",
-    "diag = compute_diagnostics(mcb, key=\"eps_sigma2\")\n",
-    "print({\n",
-    "    \"n_chains\": diag[\"n_chains\"],\n",
-    "    \"n_draws\": diag[\"n_draws\"],\n",
-    "    \"rhat\": diag[\"rhat\"],\n",
-    "    \"ess_bulk\": diag[\"ess_bulk\"],\n",
-    "    \"mcse_over_sd\": diag[\"mcse_over_sd\"],\n",
-    "})\n",
     "\n",
     "# Show acceptance statistics\n",
     "acc_df = pd.DataFrame(diag[\"acceptance\"]).T\n",
@@ -291,14 +289,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00006481])}\n"
+      "{'n_chains': 4, 'n_draws': 1500, 'rhat': array([1.0320045 , 1.08132425, 1.10381339, 1.09144862, 1.0694225 ,\n",
+      "       1.06234806, 1.13254428, 1.05725985, 1.08361328]), 'ess_bulk': array([73.93899791, 41.10839446, 25.50458238, 40.67654167, 60.82698775,\n",
+      "       66.26420919, 24.94915777, 59.07153281, 42.65487627]), 'mcse_mean': array([0.00042219, 0.00074193, 0.00102948, 0.00050698, 0.00024395,\n",
+      "       0.00038115, 0.00059923, 0.00032602, 0.00046678]), 'mcse_over_sd': array([0.11624268, 0.1619003 , 0.19777783, 0.15659377, 0.12864192,\n",
+      "       0.12850829, 0.20020352, 0.13351641, 0.15156721]), 'acceptance': {'change': {'selected': 640607.0, 'proposed': 624781.0, 'accepted': 39782.0, 'acc_rate': 0.06367351119832389, 'prop_rate': 0.97529530585835}, 'grow': {'selected': 399820.0, 'proposed': 399820.0, 'accepted': 34028.0, 'acc_rate': 0.08510829873443049, 'prop_rate': 1.0}, 'prune': {'selected': 400048.0, 'proposed': 390191.0, 'accepted': 32331.0, 'acc_rate': 0.08285942013014139, 'prop_rate': 0.9753604567451906}, 'swap': {'selected': 159525.0, 'proposed': 88772.0, 'accepted': 14054.0, 'acc_rate': 0.1583156851259406, 'prop_rate': 0.5564770412161103}, 'overall': {'selected': 1600000.0, 'proposed': 1503564.0, 'accepted': 120195.0, 'acc_rate': 0.07994006241170978, 'prop_rate': 0.9397275}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "diag_X = compute_diagnostics(mcb, X=X_train[1:10, :])\n",
+    "print(diag_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eps_sigma2': array([0.00007939])}\n"
      ]
     }
    ],
@@ -318,7 +338,7 @@
      "text": [
       "/home/svu/e1124863/bartpg/lib/python3.11/site-packages/sklearn/base.py:1365: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n",
-      "INFO:2025-09-13 19:32:36,925:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-09-13 20:26:28,431:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -326,9 +346,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.54 P_prune=0.46 A_grow=0.04 A_prune=0.09 (burnin)\n",
-      "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.00 A_prune=0.00\n",
-      "Iteration 300/300 P_grow=0.54 P_prune=0.46 A_grow=0.02 A_prune=0.00\n"
+      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.04 A_prune=0.02 (burnin)\n",
+      "Iteration 200/300 P_grow=0.51 P_prune=0.49 A_grow=0.02 A_prune=0.02\n",
+      "Iteration 300/300 P_grow=0.50 P_prune=0.50 A_grow=0.00 A_prune=0.00\n"
      ]
     }
    ],
@@ -351,10 +371,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mcb': 0.005195722343037476,\n",
-       " 'rf': 0.0090316,\n",
-       " 'lr': 0.07115610720784035,\n",
-       " 'btz': 0.003233965253457427}"
+       "{'mcb': 0.00013731324753101315,\n",
+       " 'rf': 0.0018815999999999998,\n",
+       " 'lr': 0.05785262134863105,\n",
+       " 'btz': 4.5180382585385814e-05}"
       ]
      },
      "execution_count": 9,
