Add comparison matrix. Investigate multi-tries.

--- a/benchmarks/mtmh/matrix/test_multimodal.ipynb
+++ b/benchmarks/mtmh/matrix/test_multimodal.ipynb
@@ -166,24 +166,29 @@
      "output_type": "stream",
      "text": [
       "Gelman-Rubin R̂ comparison matrix:\n",
-      "      MultiBART_Rhat  DefaultBART_Rhat\n",
-      "0           1.214521          1.252719\n",
-      "1           1.069444          1.239898\n",
-      "2           1.080779          1.043069\n",
-      "3           1.026384          1.076875\n",
-      "4           1.098152          1.224979\n",
-      "mean        1.097856          1.167508\n"
+      "      MultiBART_Rhat_Sigma2  DefaultBART_Rhat_Sigma2  MultiBART_Rhat_RMSE  \\\n",
+      "0                  1.194720                 1.252719             1.208327   \n",
+      "1                  1.136176                 1.239898             1.160678   \n",
+      "mean               1.165448                 1.246308             1.184503   \n",
+      "std                0.041397                 0.009066             0.033693   \n",
+      "\n",
+      "      DefaultBART_Rhat_RMSE  \n",
+      "0                  1.347306  \n",
+      "1                  1.399156  \n",
+      "mean               1.373231  \n",
+      "std                0.036664  \n"
      ]
     }
    ],
    "source": [
-    "import comparison\n",
+    "import benchmarks.mtmh.matrix.comparison as comparison\n",
     "\n",
-    "rhat_df = comparison.gelman_rubin_r_compare(X, y, n_runs=5, n_chains=4, ndpost=1000, nskip=100, n_trees=100)\n",
+    "rhat_df = comparison.gelman_rubin_r_compare(X, y, n_runs=2, n_chains=4, ndpost=1000, nskip=100, n_trees=100)\n",
     "mean_row = pd.DataFrame([rhat_df.mean()], index=[\"mean\"])\n",
-    "rhat_df_with_mean = pd.concat([rhat_df, mean_row])\n",
+    "std_row = pd.DataFrame([rhat_df.std()], index=[\"std\"])\n",
+    "rhat_df_with_stats = pd.concat([rhat_df, mean_row, std_row])\n",
     "print(\"Gelman-Rubin R̂ comparison matrix:\")\n",
-    "print(rhat_df_with_mean)"
+    "print(rhat_df_with_stats)"
    ]
   },
   {
@@ -195,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-11 02:08:13,069:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-09-15 13:29:33,377:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -206,62 +211,60 @@
       "MSE/Interval/Time comparison results:\n",
       "test_mse:\n",
       "      bart_mtmh      bart       btz       sto        rf       xgb\n",
-      "0      0.410907  0.375573  0.310927  0.299085  0.321395  0.315630\n",
-      "1      0.307473  0.340948  0.326057  0.313850  0.291274  0.323530\n",
-      "2      0.322261  0.372177  0.377545  0.322946  0.322573  0.333596\n",
-      "3      0.301899  0.404357  0.377322  0.314797  0.281560  0.288342\n",
-      "4      0.330002  0.394356  0.382313  0.362389  0.258459  0.299732\n",
-      "mean   0.334508  0.377482  0.354833  0.322614  0.295052  0.312166\n",
+      "0      0.417981  0.375573  0.310927  0.299085  0.321395  0.315630\n",
+      "1      0.429142  0.340948  0.326057  0.313850  0.291274  0.323530\n",
+      "mean   0.423561  0.358261  0.318492  0.306468  0.306335  0.319580\n",
+      "std    0.007892  0.024484  0.010698  0.010440  0.021299  0.005586\n",
       "\n",
       "train_mse:\n",
-      "      bart_mtmh      bart       btz       sto        rf       xgb\n",
-      "0      0.092749  0.142452  0.114043  0.181023  0.047392  0.000003\n",
-      "1      0.146548  0.150660  0.145663  0.166501  0.049546  0.000003\n",
-      "2      0.134562  0.152442  0.134439  0.181712  0.046672  0.000005\n",
-      "3      0.128291  0.152646  0.142102  0.165497  0.048973  0.000005\n",
-      "4      0.115415  0.162563  0.155337  0.147740  0.050461  0.000003\n",
-      "mean   0.123513  0.152153  0.138317  0.168494  0.048609  0.000004\n",
+      "      bart_mtmh      bart       btz       sto        rf           xgb\n",
+      "0      0.037368  0.142452  0.114043  0.181023  0.047392  3.154083e-06\n",
+      "1      0.051895  0.150660  0.145663  0.166501  0.049546  3.133884e-06\n",
+      "mean   0.044632  0.146556  0.129853  0.173762  0.048469  3.143983e-06\n",
+      "std    0.010273  0.005804  0.022358  0.010268  0.001523  1.428248e-08\n",
       "\n",
       "pi_length:\n",
       "      bart_mtmh      bart       btz       sto\n",
-      "0      1.968404  2.103050  2.339962  1.635954\n",
-      "1      2.189398  2.095345  2.265232  1.524864\n",
-      "2      2.144551  2.063562  2.257776  1.484602\n",
-      "3      2.120409  2.136062  2.419150  1.633832\n",
-      "4      1.991913  2.152724  2.347383  1.519257\n",
-      "mean   2.082935  2.110148  2.325901  1.559702\n",
+      "0      1.978806  2.103050  2.339962  1.635954\n",
+      "1      2.283946  2.095345  2.265232  1.524864\n",
+      "mean   2.131376  2.099197  2.302597  1.580409\n",
+      "std    0.215767  0.005448  0.052842  0.078553\n",
       "\n",
       "coverage:\n",
-      "      bart_mtmh   bart    btz   sto\n",
-      "0         0.850  0.890  0.970  0.84\n",
-      "1         0.930  0.940  0.930  0.81\n",
-      "2         0.920  0.890  0.930  0.84\n",
-      "3         0.940  0.920  0.940  0.81\n",
-      "4         0.930  0.920  0.950  0.80\n",
-      "mean      0.914  0.912  0.944  0.82\n",
+      "      bart_mtmh      bart       btz       sto\n",
+      "0      0.880000  0.890000  0.970000  0.840000\n",
+      "1      0.940000  0.940000  0.930000  0.810000\n",
+      "mean   0.910000  0.915000  0.950000  0.825000\n",
+      "std    0.042426  0.035355  0.028284  0.021213\n",
       "\n",
       "train_time:\n",
       "      bart_mtmh      bart       btz       sto        rf       xgb\n",
-      "0      5.023702  0.751972  3.206864  0.305897  0.136092  0.174769\n",
-      "1      4.927350  0.758091  1.357186  0.301900  0.138178  0.050720\n",
-      "2      5.112363  0.742068  1.366189  0.325469  0.132646  0.045524\n",
-      "3      5.102391  0.775701  1.360332  0.300044  0.135623  0.040308\n",
-      "4      4.957846  0.763844  1.375067  0.316103  0.134208  0.042770\n",
-      "mean   5.024730  0.758335  1.733128  0.309883  0.135349  0.070818\n",
+      "0      5.004628  0.727279  3.133868  0.289769  0.127208  0.233360\n",
+      "1      5.114944  0.732894  1.284723  0.302879  0.128550  0.045241\n",
+      "mean   5.059786  0.730086  2.209295  0.296324  0.127879  0.139301\n",
+      "std    0.078005  0.003971  1.307543  0.009270  0.000949  0.133020\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import comparison\n",
+    "import benchmarks.mtmh.matrix.comparison as comparison\n",
     "\n",
-    "mse_results = comparison.bart_mse_comparison(X, y, n_runs=5, n_skip=100, n_post=100, n_trees=100)\n",
+    "mse_results = comparison.bart_mse_comparison(X, y, n_runs=2, n_skip=100, n_post=100, n_trees=100)\n",
     "print(\"MSE/Interval/Time comparison results:\")\n",
     "for k, v in mse_results.items():\n",
     "    mean_row = pd.DataFrame([v.mean()], index=[\"mean\"])\n",
-    "    v_with_mean = pd.concat([v, mean_row])\n",
-    "    print(f\"{k}:\\n{v_with_mean}\\n\")"
+    "    std_row = pd.DataFrame([v.std()], index=[\"std\"])\n",
+    "    v_with_stats = pd.concat([v, mean_row, std_row])\n",
+    "    print(f\"{k}:\\n{v_with_stats}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
