--- a/notebooks/mtmh/01_debug_profile.ipynb
+++ b/notebooks/mtmh/01_debug_profile.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:04<00:00, 17.17it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:04<00:00, 16.82it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:34<00:00,  8.78it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:14<00:00, 20.21it/s]"
      ]
     },
     {
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-12 17:57:11,302:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-09-14 23:35:46,729:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 49.80it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 118.54it/s]\n"
      ]
     },
     {
@@ -169,13 +169,6 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -198,7 +191,7 @@
        "{'bart': 0.021602058730366257,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02515919424231273,\n",
+       " 'btz': 0.02515917299472511,\n",
        " 'bart_default': 0.0211558149339335}"
       ]
      },
@@ -225,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
