--- a/notebooks/mtmh/CalHousing_profile.ipynb
+++ b/notebooks/mtmh/CalHousing_profile.ipynb
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:09<00:00,  7.15it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:04<00:00, 16.69it/s]\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [02:37<00:00,  1.90it/s]"
+      "Iterations: 100%|██████████| 300/300 [01:23<00:00,  3.60it/s]"
      ]
     },
     {
@@ -130,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-12 18:01:34,649:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-09-14 23:38:11,594:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -167,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:20<00:00, 14.57it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 32.70it/s]"
      ]
     },
     {
@@ -202,11 +202,11 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.22158111104410724,\n",
-       " 'rf': 0.2542358390056568,\n",
-       " 'lr': 0.5411287478470684,\n",
-       " 'btz': 0.3176016792627629,\n",
-       " 'bart_default': 0.25522702814372716}"
+       "{'bart': 0.22158111110684992,\n",
+       " 'rf': 0.25424371393528344,\n",
+       " 'lr': 0.5411287478470687,\n",
+       " 'btz': 0.31760167052840327,\n",
+       " 'bart_default': 0.25522702710410633}"
       ]
      },
      "execution_count": 9,
@@ -232,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
