Add dirichlet prior notebooks

--- a/notebooks/mtmh/CalHousing_profile.ipynb
+++ b/notebooks/mtmh/CalHousing_profile.ipynb
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 17.61it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 18.11it/s]\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [01:06<00:00,  4.52it/s]"
+      "Iterations: 100%|██████████| 300/300 [01:08<00:00,  4.40it/s]"
      ]
     },
     {
@@ -130,7 +130,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-22 18:07:49,163:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "Iterations: 100%|██████████| 300/300 [01:09<00:00,  4.31it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bart_dir = MultiBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs, multi_tries=10, dirichlet_prior=True)\n",
+    "bart_dir.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:2025-09-22 18:58:39,310:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -160,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.58it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.16it/s]"
      ]
     },
     {
@@ -196,26 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.22460868545126003,\n",
+       "{'bart': 0.22332108856193558,\n",
+       " 'bart_dir': 0.20819729078194812,\n",
        " 'rf': 0.25424371393528344,\n",
        " 'lr': 0.5411287478470689,\n",
        " 'btz': 0.31760167052840327,\n",
        " 'bart_default': 0.25567164328311476}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models = {\"bart\" : bart, \n",
+    "          \"bart_dir\" : bart_dir,\n",
     "          \"rf\" : rf, \n",
     "          \"lr\" : lr,\n",
     "          \"btz\" : btz,\n",
