--- a/notebooks/mtmh/test_generator.ipynb
+++ b/notebooks/mtmh/test_generator.ipynb
@@ -380,11 +380,51 @@
     "    _update_n_and_leaf_id_numba_copy(0, dataX, False, vars, thresholds, prev_n, prev_leaf_id)\n",
     "print(\"Copy version time:\", time.time() - start)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "22e474cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Separate sampling took 0.0644 seconds\n",
+      "fast_choice took 0.0337 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bart_playground.util import fast_choice, fast_choice_with_weights\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "rng = np.random.default_rng(42)\n",
+    "weights = np.random.rand(10)\n",
+    "\n",
+    "start = time.time()\n",
+    "for _ in range(1000):\n",
+    "    for _ in range(10):\n",
+    "        i = fast_choice(rng, range(100))\n",
+    "        j = fast_choice_with_weights(rng, range(10), weights)\n",
+    "end = time.time()\n",
+    "print(f\"Separate sampling took {end - start:.4f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "for _ in range(1000):\n",
+    "    all_candidates = [(i, j) for i in range(100) for j in range(10)]\n",
+    "    for _ in range(10):\n",
+    "        i, j = fast_choice(rng, all_candidates)\n",
+    "end = time.time()\n",
+    "print(f\"fast_choice took {end - start:.4f} seconds\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
