Change while to for loop during candidate selection

--- a/notebooks/mtmh/01_debug copy.ipynb
+++ b/notebooks/mtmh/01_debug copy.ipynb
@@ -34,7 +34,7 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, root_mean_squared_error\n",
     "from bart_playground import *\n",
     "import arviz as az"
    ]
@@ -61,10 +61,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.96it/s]\n",
-      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 33.45it/s]\n",
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 33.14it/s]\n",
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 32.72it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:07<00:00, 38.22it/s]\n",
+      "Iterations: 100%|██████████| 300/300 [00:07<00:00, 42.54it/s]\n",
+      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 42.88it/s]\n",
+      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 43.46it/s]\n"
      ]
     },
     {
@@ -74,11 +74,11 @@
       "Gelman-Rubin R̂ (eps_sigma2): <xarray.Dataset> Size: 8B\n",
       "Dimensions:     ()\n",
       "Data variables:\n",
-      "    eps_sigma2  float64 8B 1.036\n",
+      "    eps_sigma2  float64 8B 1.077\n",
       "Gelman-Rubin R̂ (test_rmse): <xarray.Dataset> Size: 8B\n",
       "Dimensions:    ()\n",
       "Data variables:\n",
-      "    test_rmse  float64 8B 1.019\n"
+      "    test_rmse  float64 8B 1.032\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     "    bart.fit(X_train, y_train)\n",
     "    sigmas = [trace.global_params['eps_sigma2'][0] for trace in bart.sampler.trace]\n",
     "    preds = bart.posterior_f(X_test, backtransform=True)  # shape: (n_test, ndpost)\n",
-    "    rmses = [mean_squared_error(y_test, preds[:, k], squared=False) for k in range(preds.shape[1])]\n",
+    "    rmses = [root_mean_squared_error(y_test, preds[:, k]) for k in range(preds.shape[1])]\n",
     "    chains.append(sigmas)\n",
     "    rmse_chains.append(rmses)\n",
     "\n",
@@ -118,10 +118,10 @@
      "output_type": "stream",
      "text": [
       "              selected  success  accepted  success_rate  mh_ratio  accept_rate\n",
-      "multi_grow        7612     7612      3522      1.000000  0.462690     0.462690\n",
-      "multi_prune       7520     7431      3170      0.988165  0.426591     0.421543\n",
-      "multi_change     11884    11728      9622      0.986873  0.820430     0.809660\n",
-      "multi_swap        2984     1992      1438      0.667560  0.721888     0.481903\n"
+      "multi_grow        7488     7488      3186      1.000000  0.425481     0.425481\n",
+      "multi_prune       7551     7438      2930      0.985035  0.393923     0.388028\n",
+      "multi_change     12012    11823      8556      0.984266  0.723674     0.712288\n",
+      "multi_swap        2949     1691      1035      0.573415  0.612064     0.350966\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-15 02:27:19,380:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-09-24 23:00:56,049:jax._src.xla_bridge:822: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -193,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023298654913038185,\n",
+       "{'bart': 0.023465206167203677,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02515917299472511}"
@@ -244,10 +244,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 236.52it/s]\n",
-      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 190.29it/s]\n",
-      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 189.97it/s]\n",
-      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 181.71it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 219.77it/s]\n",
+      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 243.13it/s]\n",
+      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 228.41it/s]\n",
+      "Iterations: 100%|██████████| 300/300 [00:01<00:00, 221.77it/s]"
      ]
     },
     {
@@ -263,6 +263,13 @@
       "Data variables:\n",
       "    test_rmse  float64 8B 1.041\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -275,7 +282,7 @@
     "    bart.fit(X_train, y_train)\n",
     "    sigmas = [trace.global_params['eps_sigma2'][0] for trace in bart.sampler.trace]\n",
     "    preds = bart.posterior_f(X_test, backtransform=True)  # shape: (n_test, ndpost)\n",
-    "    rmses = [mean_squared_error(y_test, preds[:, k], squared=False) for k in range(preds.shape[1])]\n",
+    "    rmses = [root_mean_squared_error(y_test, preds[:, k]) for k in range(preds.shape[1])]\n",
     "    chains.append(sigmas)\n",
     "    rmse_chains.append(rmses)\n",
     "\n",
@@ -339,7 +346,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023852558410078183,\n",
+       "{'bart': 0.0238525117024533,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02515917299472511}"
